--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.4.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
