--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "@types/validator": "^13.7.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
