--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@types/mongoose": "^5.11.97",
     "@types/validator": "^13.7.3",
+    "argon2": "^0.28.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1",
     "typescript": "^4.7.4",
     "validator": "^13.7.0"
